tests/universal-types/ill-typed/bad-universal-types-7.stella
language core;
extend with #universal-types;

generic fn id[X](a : X) -> forall X. fn(X) -> X {
  return generic[X] fn(b : X) {
    return a
  }
}

fn main(a : Nat) -> Nat {
  return a
}
